# notion-google-assistant

./: .python-version  client.py  pyproject.toml
